unpackaged/objects/Mileage__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <formula>Contact__r.MailingStreet &amp; BR() &amp;
Contact__r.MailingCity &amp; &apos;, &apos; &amp; Contact__r.MailingState &amp; &apos; &apos;&amp; Contact__r.MailingPostalCode &amp; &apos; &apos; &amp;
HYPERLINK(&apos;http://maps.google.com/?q=&apos; &amp; Contact__r.MailingStreet &amp; &apos;, &apos; &amp;
Contact__r.MailingPostalCode, &apos; Click to Map&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mileages</relationshipLabel>
        <relationshipName>Mileages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>date of mileage tracker</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kilometers__c</fullName>
        <description>Mileage in kilometers</description>
        <formula>Miles__c  * 1.6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kilometers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miles__c</fullName>
        <description>Miles driven</description>
        <label>Miles</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mileage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Mileage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mileages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_Validation</fullName>
        <active>true</active>
        <description>Validates the Date field so that it cannot be in the future.</description>
        <errorConditionFormula>Date__c  &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Date cannot be in the future.</errorMessage>
    </validationRules>
</CustomObject>